--- a/docs/navbar.css
+++ b/docs/navbar.css
@@ -10,9 +10,15 @@
 }
 .nav-links a {
     text-decoration: none;
+    cursor: pointer;
 }
 .nav-links li {
     list-style: none;
+    user-select: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
 /* NAVBAR STYLING STARTS */
