--- a/docs/navbar.css
+++ b/docs/navbar.css
@@ -144,6 +144,7 @@
     display: none;
     font-size: 24px;
     user-select: none;
+    color: white;
 }
 /* APPLYING MEDIA QUERIES */
 @media (max-width: 768px) {
