--- a/docs/navbar.css
+++ b/docs/navbar.css
@@ -157,8 +157,10 @@
 
 .hamburger-button {
     background: transparent;
-    border: var(--hamburger-color) solid 2px;
-    border-radius: 1rem;
+    /* border: var(--hamburger-color) solid 2px; */
+    border: none;
+    border-radius: var(--nav-border-radius);
+    cursor: pointer;
 }
 
 .hamburger .line {
@@ -202,6 +204,11 @@
 
     .hamburger-button {
         display: block;
+        transition: background-color var(--nav-transition-duration);
+    }
+
+    .hamburger-button:hover {
+        background-color: var(--navbar-hover-color);
     }
 
     .links-container {
